--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "compose": "^0.1.2",
+    "formik": "^2.1.3",
+    "highcharts-react-official": "^2.2.2",
+    "material-ui": "^0.20.2",
+    "mtr-datepicker": "^0.3.7",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-datepicker": "^2.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-router": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-simple-flex-grid": "^1.3.21",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm start --prefix backend",
+    "server": "npm start --prefix backend",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm start --prefix backend\" \"npm start --prefix client\"",
+    "heroku-postbuild": "npm install --prefix client && npm install --prefix backend && npm run build --prefix client"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-highcharts": "^16.1.0"
   }
 }
