--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "compose": "^0.1.2",
     "formik": "^2.1.3",
+    "heroku": "^7.38.1",
     "highcharts-react-official": "^2.2.2",
     "material-ui": "^0.20.2",
     "mtr-datepicker": "^0.3.7",
