--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "start": "npm start --prefix backend",
     "server": "npm start --prefix backend",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm start --prefix backend\" \"npm start --prefix client\"",
-    "heroku-postbuild": "npm install --prefix client && npm install --prefix backend && npm run build --prefix client"
+    "dev": "\"npm start --prefix client\"",
+    "heroku-postbuild": "npm install --prefix client"
   },
   "eslintConfig": {
     "extends": "react-app"
