--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "styled-components": "^5.0.0"
   },
   "scripts": {
-    "start": "npm start --prefix backend",
-    "server": "npm start --prefix backend",
+    "start": "npm start --prefix client",
     "client": "npm start --prefix client",
     "dev": "\"npm start --prefix client\"",
     "heroku-postbuild": "npm install --prefix client"
