--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "webpack": "4.41.0"
+    "webpack": "^4.41.2"
   },
   "scripts": {
     "start": "react-scripts start",
